fix login page and calendar alignment

--- a/resources/sass/pages/calendar.scss
+++ b/resources/sass/pages/calendar.scss
@@ -89,4 +89,5 @@
     background-color: $color-white;
     color: $input-color;
     padding: 1rem;
+    height: 100%;
 }
